Fix du problème du pop up en version mobile

--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -238,6 +238,10 @@ h1, h2, h3, h4, h5, h6 {
   background: #76c7ed;
 }
 
+.modal-content {
+  margin-top: 15%;
+}
+
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
